# ProntoInfrared

./: .cproject  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  ProntoInfrared.ioc  README.md
.github/workflows/: cmake-gcc-arm.yml
Code/: infrared_config_stm32.h  infrared_receiver.cpp  infrared_receiver.h  infrared_transmitter.cpp  infrared_transmitter.h  main.cpp  pronto_hex.cpp  pronto_hex.h
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
ProntoInfrared/: CMakeLists.txt  infrared_config_stm32.hpp  infrared_receiver.cpp  infrared_receiver.hpp  infrared_transmitter.cpp  infrared_transmitter.hpp  main.cpp  pronto_hex.cpp  pronto_hex.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
